105-roman-numerals-converter/cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation Template for Roman Numerals Application

Resources:
  WebServerSG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Web App #required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServer:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-0947d2ba12ee1ff75
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WebServerSG
      Tags:
          - Key: Name
            Value: Web Server of Roman Numerals App 
      UserData: 
        'Fn::Base64': !Sub |
          #!/bin/bash
          yum update -y
          yum install python3 -y
          pip3 install flask
          mkdir /home/ec2-user/templates
          cd /home/ec2-user/templates
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/105-roman-numerals-converter/templates/index.html
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/105-roman-numerals-converter/templates/result.html
          cd ..
          wget https://raw.githubusercontent.com/akoleoglu/aws-projects/master/105-roman-numerals-converter/app.py
          python3 /home/ec2-user/app.py

      Tags:
        - Key: Name
          Value: Web Server of Roman Numerals App  
Outputs:
  WebsiteURL:
    Description: Roman Numerals Converter Application URL
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServer.PublicDnsName
